[gd_scene load_steps=8 format=2]

[ext_resource path="res://core/game_stages/common/GameStage.tscn" type="PackedScene" id=1]
[ext_resource path="res://musiq_game/game_stages/MusiQContestsStage.gd" type="Script" id=2]
[ext_resource path="res://core/game_stages/common/PlayerIconDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://musiq_game/player/MusiQPlayerIcon.tscn" type="PackedScene" id=4]
[ext_resource path="res://musiq_game/game_stages/SongPlayingSpinner.tscn" type="PackedScene" id=5]
[ext_resource path="res://core/game_stages/common/CountdownDisplay.tscn" type="PackedScene" id=7]
[ext_resource path="res://musiq_game/ui/textures/MusiQBackground.png" type="Texture" id=8]

[node name="MusiQContestsStage" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Background" parent="." index="0"]
texture = ExtResource( 8 )

[node name="ContestTimeoutTimer" type="Timer" parent="." index="3"]

[node name="SongPlayingSpinner" parent="." index="4" instance=ExtResource( 5 )]
position = Vector2( 965.437, 579.53 )

[node name="PlayerIconDisplay" parent="." index="5" instance=ExtResource( 3 )]
position = Vector2( 966.163, 579.612 )
player_icon_scene = ExtResource( 4 )
margin_x = 0.21
margin_y = 0.33
icon_emphasis_scale = 1.0
type = 0

[node name="CountdownDisplay" parent="." index="6" instance=ExtResource( 7 )]
margin_left = 44.0
margin_top = 28.0
margin_right = 365.0
margin_bottom = 176.0
